N4/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  namespace: stage
  labels:
    app: test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: ghcr.io/aleksanderb5/app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: stage
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - name: http
      port: 80
      targetPort: 80
