N4/test-app-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-nodeport
  namespace: stage
spec:
  type: NodePort
  selector:
    app: test-app
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
